fix: read CORS allowed origins from env var